--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a href="https://discord.gg/dis-st" target="_blank"><input
                                 style="background: transparent;border: 2px solid #a883e9;" type="submit" class="submit"
                                 value="Join Us"></a>
-                        <input style="margin-left: 15px;" type="submit" class="submit" value="Browse Features!">
+                        <a href="putTokens.html"><input style="margin-left: 15px;" type="submit" class="submit" value="Tokens Host!"></a>
                     </div>
                 </div>
             </div>
